restauracion de proyecto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,9 +103,7 @@
                         <h2>Información de Contacto</h2>
                          
                         <p>Celular: 2657326848</p>
-                        <!-- datos
-                        <p>Dirección: Calle Ficticia 123, Ciudad, País</p>
-                         <!-- datos -->
+                        
                          <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria obtener más información sobre la flota" class="button2" target="_blank">
                             WhatsApp
                             <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +137,7 @@
                     <a href="./distribuidores.html" class="cta-button"><button class="btn">Más información</button></a>
                 </div>
                 <div class="distribution-image">
-                    <img src="../img/la-flota.webp" alt="Distribución de La Flota Malbec" class="floating">
+                    <img src="../img/la-flota.png" alt="Distribución de La Flota Malbec" class="floating">
                 </div>
             </div>
         </section>
