--- a/pages/distribuidores.html
+++ b/pages/distribuidores.html
@@ -65,14 +65,12 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner headerr">
                 <div class="carousel-item active">
-                    <img src="../img/banner-la-flota-uvas.webp" class="d-block w-100" alt="uvas en naturaleza">
+                    <img src="../img/banner1.webp" class="d-block w-100" alt="uvas en naturaleza">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/banner-la-flota-botella.png"" class=" d-block w-100" alt="vino flota wines">
+                    <img src="../img/banner2.webp"" class=" d-block w-100" alt="vino flota wines">
                 </div>
-                <div class="carousel-item">
-                    <img src="../img/banner-la-flota-botella.png"" class=" d-block w-100" alt="...">
-                </div>
+                
             </div>
             <button class="carousel-control-prev" id="btn-header" type="button" data-bs-target="#carouselExample"
                 data-bs-slide="prev">
@@ -95,15 +93,10 @@
                     <img src="../img/picnic.webp" alt="imagen sobre la flota">
                 </div>
                 <div class="about-content">
-                    <h1 class="h1-about">distribuye la flota</h1>
-                    <h2>acerca de la flota</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis blanditiis inventore totam at
-                        ipsum nulla. Ipsa, sed eius. Magni, perspiciatis sed. Dolores est perspiciatis exercitationem!
-                        Repellat veritatis quis accusantium adipisci. Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. Iusto unde doloribus et accusantium voluptates, in obcaecati eum consectetur
-                        modi, molestias mollitia dicta ducimus iure aperiam, natus animi numquam fugit blanditiis!</p>
-                    <a href="#origin">
-                        <button class="btn mas-info-nosotros">Read more</button>
+                    <h1 class="h1-about">Distribuye la flota</h1>
+                    <h3 id="text-light">Únete a nuestra red y lleva un vino de calidad excepcional a más personas. Ofrecemos precios especiales para distribuidores, soporte personalizado y un producto que enamora a los amantes del buen Malbec.</h3>
+                    <a href="./contacto.html">
+                        <button class="btn mas-info-nosotros">CONTACTAR</button>
                     </a>
                 </div>
             </section>
@@ -112,22 +105,77 @@
                     <h2>Nuestro Equipo</h2>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="../img/persona-1.jpg" alt="Foto de persona 1">
+                            <img src="../img/alfonsa.webp" alt="imagen de alfonsa bebidas">
                             <h3>Alfonsa Bebidas</h3>
                             <p class="role">Distribuidor villa mercedes</p>
-                            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit necessitatibus ad similique quas iste aspernatur minus debitis nihil laborum? Modi animi cum voluptatem labore iste eligendi nam at alias eum.</p>
+                            <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                                WhatsApp
+                                <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
+                                    c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98h-0.008
+                                    c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z" fill="#fff"></path>
+                                    <path d="M35.176,12.832c-2.98-2.982-6.941-4.625-11.157-4.626c-8.704,0-15.783,7.076-15.787,15.774
+                                    c-0.001,2.981,0.833,5.883,2.413,8.396l0.376,0.597l-1.595,5.821l5.973-1.566l0.577,0.342c2.422,1.438,5.2,2.198,8.032,2.199h0.006
+                                    c8.698,0,15.777-7.077,15.78-15.776C39.795,19.778,38.156,15.814,35.176,12.832z" fill="#40c351"></path>
+                                    <path d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011
+                                    c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906
+                                    c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255
+                                    c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543
+                                    c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119
+                                    c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968
+                                    c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831
+                                    C20.612,19.329,19.69,16.983,19.268,16.045z" fill="#fff"></path>
+                                </svg>
+                            </a>
+                            <a href="https://www.alfonsadistribuidora.com.ar/articulo.asp?idarticulo=5134&art_nombre=VINO%20LA%20FLOTA%20MALBEC%20750CC" target="_blank">Sitio Web</a>
                         </div>
                         <div class="team-member">
-                            <img src="../img/persona-2.webp" alt="Foto de persona 2">
-                            <h3>nombre cordoba</h3>
-                            <p class="role">disitrbuidor de cordoba</p>
-                            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit necessitatibus ad similique quas iste aspernatur minus debitis nihil laborum? Modi animi cum voluptatem labore iste eligendi nam at alias eum.</p>
+                            <img src="../img/berlin.webp" alt="imagen de berlin">
+                            <h3>Berlin Bebidas</h3>
+                            <p class="role">Disitrbuidor de Buenos aires</p>
+                            <a href="https://api.whatsapp.com/send?phone=+5401156314183&text=Hola, Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                                WhatsApp
+                                <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
+                                    c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98h-0.008
+                                    c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z" fill="#fff"></path>
+                                    <path d="M35.176,12.832c-2.98-2.982-6.941-4.625-11.157-4.626c-8.704,0-15.783,7.076-15.787,15.774
+                                    c-0.001,2.981,0.833,5.883,2.413,8.396l0.376,0.597l-1.595,5.821l5.973-1.566l0.577,0.342c2.422,1.438,5.2,2.198,8.032,2.199h0.006
+                                    c8.698,0,15.777-7.077,15.78-15.776C39.795,19.778,38.156,15.814,35.176,12.832z" fill="#40c351"></path>
+                                    <path d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011
+                                    c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906
+                                    c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255
+                                    c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543
+                                    c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119
+                                    c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968
+                                    c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831
+                                    C20.612,19.329,19.69,16.983,19.268,16.045z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                         <div class="team-member">
-                            <img src="../img/persona-3.webp" alt="Foto de persona 3">
-                            <h3>Buenos aires</h3>
-                            <p class="role">distribuidor en buenos aires</p>
-                            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit necessitatibus ad similique quas iste aspernatur minus debitis nihil laborum? Modi animi cum voluptatem labore iste eligendi nam at alias eum.p>
+                            <img src="../img/walter.webp" alt="iamgen de distribuidor">
+                            <h3>Walter Edgardo</h3>
+                            <p class="role">distribuidor de Cordoba</p>
+                            <a href="https://api.whatsapp.com/send?phone=+54935170248518&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                                WhatsApp
+                                <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
+                                    c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98h-0.008
+                                    c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z" fill="#fff"></path>
+                                    <path d="M35.176,12.832c-2.98-2.982-6.941-4.625-11.157-4.626c-8.704,0-15.783,7.076-15.787,15.774
+                                    c-0.001,2.981,0.833,5.883,2.413,8.396l0.376,0.597l-1.595,5.821l5.973-1.566l0.577,0.342c2.422,1.438,5.2,2.198,8.032,2.199h0.006
+                                    c8.698,0,15.777-7.077,15.78-15.776C39.795,19.778,38.156,15.814,35.176,12.832z" fill="#40c351"></path>
+                                    <path d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011
+                                    c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906
+                                    c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255
+                                    c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543
+                                    c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119
+                                    c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968
+                                    c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831
+                                    C20.612,19.329,19.69,16.983,19.268,16.045z" fill="#fff"></path>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -143,15 +191,11 @@
         <div class="group1-footer">
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
-                <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/linkedin.svg" alt="linkedin de la flota">
-                </a>
+
                 <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
                     <img src="../iconos/instagram.svg" alt="instagram de la flota">
                 </a>
-                <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/github.png" alt="github del desarrollador">
-                </a>
+
                 <p>puedes escribirnos por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
             </div>
