--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -129,7 +129,7 @@
                 <div class="showcase-grid">
                     <div class="bottle-display">
                         <div class="bottle-wrapper">
-                            <img src="../img/la-flota.webp" alt="Botella La Flota Malbec" class="bottle-3d">
+                            <img src="../img/la-flota.png" alt="Botella La Flota Malbec" class="bottle-3d">
                         </div>
                         <div class="bottle-shadow"></div>
                     </div>
@@ -161,7 +161,7 @@
                 <div class="purchase-content">
                     <h2 class="purchase-title">Encuentra Nuestro Vino</h2>
                     <p class="purchase-text">Descubre dónde conseguir La Flota Malbec</p>
-                    <a href="#" class="purchase-button">Puntos de venta</a>
+                    <a href="./distribuidores.html" class="purchase-button">Puntos de venta</a>
                 </div>
             </div>
         </section>
@@ -273,14 +273,8 @@
         <div class="group1-footer">
             <div class="red-social">
                 <h2>SIGUENOS EN NUESTRAS REDES</h2>
-                <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/linkedin.svg" alt="acceso a linkedin">
-                </a>
                 <a href="https://www.instagram.com/laflotawines/" class="red-social-footer" target="_blank">
                     <img src="../iconos/instagram.svg" alt="instagram de la flota">
-                </a>
-                <a href="#" target="_blank" class="red-social-footer">
-                    <img src="../iconos/github.png" alt="acceso a github">
                 </a>
                 <p>puedes escribirnos por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
