--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="contenedor-inferior">
                 <div class="contenedor-descripcion">
                     <h2>Nosotros</h2>
-                    <p>Tres amigos con una pasión compartida la de crear vinos que ofrezcan una experiencia descontracturada, accesible inspirada en el espíritu libre y aventurero</p>
+                    <h3 class="text-light">Tres amigos con una pasión compartida la de crear vinos que ofrezcan una experiencia descontracturada, accesible inspirada en el espíritu libre y aventurero</h3>
                     
                 </div>
 
