agregando nuestros distribuidores

--- a/pages/distribuidores.html
+++ b/pages/distribuidores.html
@@ -102,7 +102,7 @@
             </section>
             <section id="equipo" class="team hidden">
                 <div class="container">
-                    <h2>Nuestro Equipo</h2>
+                    <h2>Nuestros Distribuidores</h2>
                     <div class="team-grid">
                         <div class="team-member">
                             <img src="../img/alfonsa.webp" alt="imagen de alfonsa bebidas">
