--- a/pages/distribuidores.html
+++ b/pages/distribuidores.html
@@ -26,7 +26,6 @@
 </noscript>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Nosotros - Flota Wines </title>
@@ -108,7 +107,7 @@
                             <img src="../img/alfonsa.webp" alt="imagen de alfonsa bebidas">
                             <h3>Alfonsa Bebidas</h3>
                             <p class="role">Distribuidor villa mercedes</p>
-                            <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                            <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
                                 WhatsApp
                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
@@ -133,7 +132,7 @@
                             <img src="../img/berlin.webp" alt="imagen de berlin">
                             <h3>Berlin Bebidas</h3>
                             <p class="role">Disitrbuidor de Buenos aires</p>
-                            <a href="https://api.whatsapp.com/send?phone=+5401156314183&text=Hola, Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                            <a href="https://api.whatsapp.com/send?phone=01156314183&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
                                 WhatsApp
                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
@@ -157,7 +156,7 @@
                             <img src="../img/walter.webp" alt="iamgen de distribuidor">
                             <h3>Walter Edgardo</h3>
                             <p class="role">distribuidor de Cordoba</p>
-                            <a href="https://api.whatsapp.com/send?phone=+54935170248518&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
+                            <a href="https://api.whatsapp.com/send?phone=+549351702-4851&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
                                 WhatsApp
                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5
@@ -199,15 +198,6 @@
                 <p>puedes escribirnos por nuestras redes!</p>
                 <p>forma parte de nuestra comunidad!</p>
             </div>
-        </div>
-        <div class="group3-footer">
-            <ul>
-                <li>
-                    <a href="../error404.html">Terminos y condiciones</a>
-                </li>
-                <li>
-                    <a href="../error404.html">Preguntas frecuentes</a>
-                </li>
         </div>
         <div class="group2-footer">
             <small>&copy;2025 <b>Vinos Wines</b> - Todos Los Derechos Reservados</small>
