separa el js del video solo al index

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
     <script src="js/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/main.js"></script>
+    <script src="js/video.js"></script>
     <a href="https://api.whatsapp.com/send?phone=2657326848&text=Hola, me gustaria Obtener más información sobre la flota"
         class="float pulse" target="_blank">
         <i class=" fa-brands fa fa-whatsapp my-float" aria-hidden="true"></i>
