intentando resolver problema de normalize.css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="home" class="hero ">
             <div class="hero-content animate__animated hidden animated-element">
                 <h1>La Flota Wines</h1>
-                <p>EXPLORA NUEVAS SENSACIONES</p>
+                <p><b>EXPLORA NUEVAS SENSACIONES</b></p>
                 <a href="./pages/laflota.html" class="btn">Conócelo</a>
             </div>
         </section>
