--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section>
             <div class="info-container">
                 <div class="info-container-text">
-                    <h2 class="h2-white">Un vino para todo</h2>
+                    <h2 class="h2-white">Un vino para todo y Todos</h2>
                     <span class="span-vino">La flota rompe los paradigmas del mundo del vino, es una propuesta simple de altísima calidad que solo hay que disfrutarlo.
                     </span>
                     <a href="./pages/laflota.html" class="a-ficha">
@@ -97,10 +97,10 @@
 
             <section class="image-grid hidden">
                 <div class="grid-item">
-                    <img src="./img/campo.webp" alt ="campo">
+                    <img src="./img/vino-mar.webp" alt ="campo">
                 </div>
                 <div class="grid-item">
-                    <img src="./img/vino-carne.webp" alt="vino y carne">
+                    <img src="./img/vino-playa.webp" alt="vino y carne">
                 </div>
             </section>
 
