--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="© 2024 Alfonsa Bebidas">
     <meta name="keywords"
-        content="La Flota Wines, vino de calidad, vinos premium, vino Malbec, vinos argentinos, compra vino online">
+        content="Vinos premium, distribución de vinos, comprar vino por mayor, La Flota Wines, vinos argentinos, vino Malbec, vino de calidad,tienda de vinos, vinoteca, distribuidor de vinos, cómo vender vino, negocio de vinos, bodega argentina.">
     <meta property="og:title" content="La Flota Wines - Vinos Premium">
     <meta property="og:description"
         content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas. Perfecto para momentos especiales.">
@@ -18,8 +18,8 @@
         <meta property="og:url" content="https://laflotawines.com.ar">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="La Flota Wines - Vinos Premium">
-        <meta name="twitter:description" content="Descubre La Flota Wines, un vino de calidad elaborado con uvas seleccionadas.">
+        <meta name="twitter:title" content="La Flota Wines - Distribuye Vinos de Calidad">
+        <meta name="twitter:description" content="Descubre La Flota Wines, vinos elaborados con uvas seleccionadas. Sé parte de nuestra red de distribuidores y lleva calidad a más clientes">
         <meta name="twitter:image" content="https://raw.githubusercontent.com/FernandoSatti/La-Flota-Wines/master/img/banner-la-flota-botella.webp">
         
     <link rel="canonical" href="https://laflotawines.com.ar">
@@ -86,7 +86,7 @@
                     </span>
                     <a href="./pages/laflota.html" class="a-ficha">
                         <button class="btn" id="btn-ficha">
-                            ficha tecnica
+                            ficha técnica
                         </button>
                     </a>
                 </div>
@@ -97,10 +97,10 @@
 
             <section class="image-grid hidden">
                 <div class="grid-item">
-                    <img src="./img/vino-mar.webp" alt ="campo">
+                    <img src="./img/vino-mar.webp" alt ="vino con copa en mar">
                 </div>
                 <div class="grid-item">
-                    <img src="./img/vino-playa.webp" alt="vino y carne">
+                    <img src="./img/vino-playa.webp" alt="vino en la playa">
                 </div>
             </section>
 
@@ -114,7 +114,7 @@
 
                 <div class="galeria-vinos">
                     <article class="tarjeta-vino">
-                        <img src="./img/german-sanchez.webp" alt="Drupy con Flotawines" class="imagen-vino">
+                        <img src="./img/german-sanchez.webp" alt="German Sanchez con vino La Flota" class="imagen-vino">
                         <div class="overlay-texto">
                             <h3>German Sanchez</h3>
                             <p class="descripcion">Te lo hará conocer y llevártelo hasta tu mesa
@@ -132,7 +132,7 @@
                     </article>
 
                     <article class="tarjeta-vino">
-                        <img src="./img/pablo-foto.webp" alt="Otro Creador" class="imagen-vino">
+                        <img src="./img/pablo-foto.webp" alt="Pablo Satti " class="imagen-vino">
                         <div class="overlay-texto">
                             <h3>Pablo Satti</h3>
                             <p class="descripcion">Lleva la Flota a buen puerto
