--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -135,7 +135,7 @@
                     <a href="./distribuidores.html" class="cta-button"><button class="btn">Más información</button></a>
                 </div>
                 <div class="distribution-image">
-                    <img src="../img/la-flota.png" alt="Distribución de La Flota Malbec" class="floating">
+                    <img src="../img/la-flota.png" alt="botella Flota Malbec" class="floating">
                 </div>
             </div>
         </section>
