--- a/pages/distribuidores.html
+++ b/pages/distribuidores.html
@@ -63,10 +63,10 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner headerr">
                 <div class="carousel-item active">
-                    <img src="../img/banner1.webp" class="d-block w-100" alt="uvas en naturaleza">
+                    <img src="../img/banner1.webp" class="d-block w-100" alt="distribuye la flota">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/banner2.webp"" class=" d-block w-100" alt="vino flota wines">
+                    <img src="../img/banner2.webp"" class=" d-block w-100" alt="uvas flota wines">
                 </div>
                 
             </div>
@@ -88,7 +88,7 @@
         <div class="nosotros-container">
             <section class="section-nosotros hidden">
                 <div class="about-image">
-                    <img src="../img/picnic.webp" alt="imagen sobre la flota">
+                    <img src="../img/picnic.webp" alt="picnic con vino">
                 </div>
                 <div class="about-content">
                     <h1 class="h1-about">Distribuye la flota</h1>
@@ -130,7 +130,7 @@
                         <div class="team-member">
                             <img src="../img/berlin.webp" alt="imagen de berlin">
                             <h3>Berlin Bebidas</h3>
-                            <p class="role">Disitrbuidor de Buenos aires</p>
+                            <p class="role">Distribuidor de Buenos aires</p>
                             <a href="https://api.whatsapp.com/send?phone=01156314183&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
                                 WhatsApp
                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
@@ -154,7 +154,7 @@
                         <div class="team-member">
                             <img src="../img/walter.webp" alt="iamgen de distribuidor">
                             <h3>Walter Edgardo</h3>
-                            <p class="role">distribuidor de Cordoba</p>
+                            <p class="role">Distribuidor de Cordoba</p>
                             <a href="https://api.whatsapp.com/send?phone=+549351702-4851&text=Hola, me gustaria obtener más información para distribuir la Flota vino Malbec" class="button2" target="_blank">
                                 WhatsApp
                                 <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
