--- a/pages/laflota.html
+++ b/pages/laflota.html
@@ -72,7 +72,7 @@
                 <div class="laflota-process__grid">
                     <div class="laflota-process__step">
                         <div class="laflota-process__image">
-                            <img src="../img/uvas-seleccionadas.webp" alt="Selección de Uvas">
+                            <img src="../img/uvas-seleccionadas.webp" alt="Uvas en naturaleza">
                         </div>
                         <div class="laflota-process__content">
                             <div class="laflota-process__icon">
@@ -84,7 +84,7 @@
                     </div>
                     <div class="laflota-process__step">
                         <div class="laflota-process__image">
-                            <img src="../img/fermentacion.webp" alt="Fermentación">
+                            <img src="../img/fermentacion.webp" alt="Botellas de vino">
                         </div>
                         <div class="laflota-process__content">
                             <div class="laflota-process__icon">
